[package]
name = "entity_table_realtime"
description = "An ECS data store for realtime components"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/entity-table-realtime.git"
repository = "https://github.com/gridbugs/entity-table-realtime.git"
documentation = "https://docs.rs/entity_table_realtime"

[dependencies]
