[package]
name = "entity_table_realtime"
description = "An ECS data store for realtime components"
version = "0.1.2"
edition = "2021"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/entity-table-realtime.git"
repository = "https://github.com/gridbugs/entity-table-realtime.git"
documentation = "https://docs.rs/entity_table_realtime"

[features]
serialize = ["serde", "entity_table/serialize"]

[dependencies]
entity_table = "0.2"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
